--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <header>
-        <img class="imagem-cabecalho" src="Banner-Agrinho-2023.png" alt="baner agrinho">
+        <img class="Banner-Agrinho SF" src="Banner-Agrinho-2023.png" alt="baner agrinho">
+        <img class="Banner-tablet SF" src="Banner-Agrinho-2023.png" alt="baner agrinho">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Inscrição</li>
+            <li class="cabecalho-lista-item">Template</li>
+        </ul>
     
     </header>
         <div class="tema">
