--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <img class="Banner-Agrinho" src="Banner-Agrinho.png" alt="baner agrinho">
-        <img class="Banner-tablet" src="Banner-tablet.png" alt="baner agrinho">
+        <img class="Banner-cabecalho" src="Banner-Agrinho.png" alt="baner agrinho">
+        <img class="Banner-cabecalho" src="Banner-tablet.png" alt="baner agrinho">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Inscrição</li>
             <li class="cabecalho-lista-item">Template</li>
