--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img class="Banner-cabecalho" src="Banner-Agrinho.png" alt="baner agrinho">
         <img class="Banner-cabecalho" src="Banner-tablet.png" alt="baner agrinho">
         <ul class="cabecalho-lista">
