--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="Banner-cabecalho" src="Banner-Agrinho.png" alt="baner agrinho">
-        <img class="Banner-cabecalho" src="Banner-tablet.png" alt="baner agrinho">
+        <img class="Banner-cabecalho" src="styles/Banner-tablet.png" alt="baner agrinho">
+        <img class="Banner-cabecalho" src="styles/Banner-Agrinho.png" alt="baner agrinho">
            
     </header>
 
