--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="Categorias">
 
         </P>
-        <h2>Quem pode participar?</h2>
+        <h2 class="body-titulos">Quem pode participar?</h2>
         <li>Alunos matriculados no curso de Games e Programação que tenha concluído pelo menos 5 cursos de acordo com o plano de estudos 2023.</li>
         <li>Alunos matriculados em qualquer turma do componente curricular de Pensamento Computacional que tenha concluído pelo menos 3 cursos de acordo com o plano de estudos 2023.</li>
         <li>Alunos matriculados no componente curricular Trilha de programação I (Matemática II) que tenha concluído pelo menos 2 cursos de acordo com o plano de estudos 2023.</li>
@@ -72,7 +72,7 @@
         </h4>
 
         <div class="categoria1">
-            <p> Direcionada para os estudantes do 6° ao 9° ano das escolas em Tempo Integral e estudantes
+            <p class="cat-desc"> Direcionada para os estudantes do 6° ao 9° ano das escolas em Tempo Integral e estudantes
                 do 8o e 9o ano das Escolas Regulares matriculados na unidade curricular de Pensamento Computacional, 
                 e estudantes matriculados no
                 Programa de Ampliação de Jornada - Programa Edutech (Games e Programação).
@@ -86,7 +86,7 @@
         </h4>
 
         <div class="categoria2">
-            <p>
+            <p class="cat-desc">
                 Direcionada para os estudantes da 1a série matriculados na unidade curricular de Pensamento Computacional.
             </p>
 
@@ -98,13 +98,13 @@
         </h4>
 
         <div class="categoria3">
-            <p>
+            <p class="cat-desc">
                 Trilha de Programação I (Matemática II) - Ensino Médio, direcionada para os estudantes da 2a série do novo ensino médio.
             </p>
 
         </div>
 
-        <h2>
+        <h2 class="body-titulos">
             Inscrições e Etapas do Concurso
         </h2>
 
@@ -112,9 +112,9 @@
             1ª - Etapa Escolar
         </h4>
 
-        <p> A primeira etapa do concurso consiste no desenvolvimento dos projetos pelos estudantes e na
+        <p class="cat-desc"> A primeira etapa do concurso consiste no desenvolvimento dos projetos pelos estudantes e na
 avaliação e classificação dos mesmos pela equipe avaliadora da instituição de ensino. </p>
-            <p>Os professores regentes das turmas de Pensamento Computacional, Trilha de Programação I (Matemática II) e Games e Programação serão os
+            <p class="cat-desc">Os professores regentes das turmas de Pensamento Computacional, Trilha de Programação I (Matemática II) e Games e Programação serão os
                 responsáveis por liderar a divulgação do concurso e avaliar os projetos.</p>
             <p>Estarão inscritos na primeira etapa do concurso os projetos enviados pelos professores até às 23h59 do
                 dia 04/08.</p>
@@ -160,7 +160,7 @@ será responsável por selecionar por NRE:
             meio do site do Edutech e do SENAR-PR.
         </p>
 
-        <h2>
+        <h2 class="body-titulos">
             Premiação
         </h2>
 
@@ -170,7 +170,7 @@ será responsável por selecionar por NRE:
         <img class="imagem-premiacao" src="premiação.jpg" alt="imagem premiação">
 
         <div class="texto-premiacao">
-            <p>
+            <p class="txt-prem">
                 Os estudantes e professores responsáveis pelos projetos vencedores das Subcategorias 1, 2 e 3
     da etapa estadual serão premiados com um certificado e um aparelho celular - Smartphone.
             </p>
